; ModuleID = '/home/carl/AnghaBench/postgres/src/timezone/extr_zic.c_verror.c'
source_filename = "/home/carl/AnghaBench/postgres/src/timezone/extr_zic.c_verror.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@filename = common dso_local global i8* null, align 8
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"\22%s\22, line %d: \00", align 1
@linenum = common dso_local global i32 0, align 4
@rfilename = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [27 x i8] c" (rule from \22%s\22, line %d)\00", align 1
@rlinenum = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @verror to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @verror(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i8*, i8** @filename, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load i32, i32* @stderr, align 4
  %9 = call i8* @_(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %10 = load i8*, i8** @filename, align 8
  %11 = load i32, i32* @linenum, align 4
  %12 = call i32 (i32, i8*, ...) @fprintf(i32 %8, i8* %9, i8* %10, i32 %11)
  br label %13

13:                                               ; preds = %7, %2
  %14 = load i32, i32* @stderr, align 4
  %15 = load i8*, i8** %3, align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @vfprintf(i32 %14, i8* %15, i32 %16)
  %18 = load i8*, i8** @rfilename, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %26

20:                                               ; preds = %13
  %21 = load i32, i32* @stderr, align 4
  %22 = call i8* @_(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  %23 = load i8*, i8** @rfilename, align 8
  %24 = load i32, i32* @rlinenum, align 4
  %25 = call i32 (i32, i8*, ...) @fprintf(i32 %21, i8* %22, i8* %23, i32 %24)
  br label %26

26:                                               ; preds = %20, %13
  %27 = load i32, i32* @stderr, align 4
  %28 = call i32 (i32, i8*, ...) @fprintf(i32 %27, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i8* @_(i8*) #1

declare dso_local i32 @vfprintf(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
